--- a/sources/index.html
+++ b/sources/index.html
@@ -5,15 +5,17 @@
    </head/>
    <body>
    <header>
-             <h1>this is my developer story</h1>
+             <h1>This is my developer story</h1>
     <ol>
         <li>When I was in high school, I always wanted to be a teacher.</li>
         <li>When I started to go to college, I started to use computers and the internet more in my daily life.</li>
         <li>Then, I wanted to learn how computers, softwares, and web pages work. </li>
         <li>That is what motivated me to study computer information systems in college, and start looking for a source that teaches me how to code.</li>
         <li>I figured out that I enjoy doing hands- on projects and learning while applying my learning rather than just keep reading and watching videos.</li>
-        <li>With Refcode, I will learn how to build my first website, and know how to code, which for me is the most valuable experience that I will gain.<li>
+        <li>With Refcode, I will learn how to build my first website, and know how to code, which for me is the most valuable experience that I will gain.</li>
     </ol>
+    <h2><a href="resume.html">Check my Resume</a>
+
    </header>
   <section>
     <p>
