--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li>I figured out that I enjoy doing hands- on projects and learning while applying my learning rather than just keep reading and watching videos.</li>
         <li>With Refcode, I will learn how to build my first website, and know how to code, which for me is the most valuable experience that I will gain.</li>
     </ol>
-    <h2><a href="file:///Users/refcode/Documents/GitHub/Habo-Alo.github.io/resume.html">Check my Resume</a>
+    <h2><a href="resume.html">Check my Resume</a>
 
    </header>
   <section>
