--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,7 @@
 <h1>Habo<span> Alo</span></h1>
 <h2>haboush46@gmail.com<span></span></h2>
 <h2>470-659-7637<span></span></h2>
+<h2>Atlanta, GA<span></span></h2>
 <ul><p><span class="Coding1">Currently, a student at Georgia State University,
   majoring in information system management,
   with two years of experience in a warehouse inventory,
