--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE>
 <html>
+   <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#Bio">Bio</a>
+  <a href="#My Resume">My Resume</a>
+  <a href="#contact">Contact</a>
+  <a href="#Links">Links</a>
+</div>
    <head>
       <link herf="resume.css">
      <title>first HTML web page</title>
