--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <a class="active" href="#home">Home</a>
   <a href="#Bio">Bio</a>
   <a href="#My Resume">My Resume</a>
+   <a href="#Projects">Projects</a>  
   <a href="#contact">Contact</a>
   <a href="#Links">Links</a>
 </div>
