--- a/index.html
+++ b/index.html
@@ -9,8 +9,58 @@
   <a href="#Links">Links</a>
 </div>
    <head>
-      <link herf="resume.css">
      <title>first HTML web page</title>
+     <style>
+       h1{
+ font-size:48px;
+ font-family:'monaco', monospace;
+ text-align:center;
+  
+}
+h2{
+  font-size: 36px;
+  text-align: center;
+  font-style: normal;
+  font-weight: lighter;
+  font-family:'monaco', monospace;
+}
+h3{
+  font-size: 30px;
+  text-align: left;
+  font-style: normal;
+  font-weight: lighter;
+  font-family:'monaco', monospace;
+  text-decoration: underline;
+}
+lo{
+  font-size: 26px;
+  text-align: left;
+  font-style: normal;
+  font-weight: normal;
+  font-family:'monaco', monospace;
+}
+div{
+  font-size: 24px;
+  text-align: left;
+  font-style: normal;
+  font-weight: normal;
+  font-family:'monaco', monospace;
+}
+span{
+  font-size: 24px;
+  text-align: left;
+  font-style: normal;
+  font-weight: normal;
+  font-family:'monaco', monospace;
+}
+p{
+  font-size: 32px;
+  text-align: left;
+  font-style: normal;
+  font-weight: normal;
+  font-family:'monaco', monospace;
+}
+     </style>  
    </head/>
    <body>
    <header>
