--- a/resume.html
+++ b/resume.html
@@ -2,6 +2,59 @@
 <h2>haboush46@gmail.com<span></span></h2>
 <h2>470-659-7636<span></span></h2>
 <h2>Atlanta, GA<span></span></h2>
+<style>
+       <style>
+       h1{
+ font-size:48px;
+ font-family:'monaco', monospace;
+ text-align:center;
+  
+}
+h2{
+  font-size: 36px;
+  text-align: center;
+  font-style: normal;
+  font-weight: lighter;
+  font-family:'monaco', monospace;
+}
+h3{
+  font-size: 30px;
+  text-align: left;
+  font-style: normal;
+  font-weight: lighter;
+  font-family:'monaco', monospace;
+  text-decoration: underline;
+}
+lo{
+  font-size: 26px;
+  text-align: left;
+  font-style: normal;
+  font-weight: normal;
+  font-family:'monaco', monospace;
+}
+div{
+  font-size: 24px;
+  text-align: left;
+  font-style: normal;
+  font-weight: normal;
+  font-family:'monaco', monospace;
+}
+span{
+  font-size: 24px;
+  text-align: left;
+  font-style: normal;
+  font-weight: normal;
+  font-family:'monaco', monospace;
+}
+p{
+  font-size: 32px;
+  text-align: left;
+  font-style: normal;
+  font-weight: normal;
+  font-family:'monaco', monospace;
+}
+     </style> 
+</style>  
 <ul><p><span class="Coding1">Currently, a student at Georgia State University,
   majoring in information system management,
   with two years of experience in a warehouse inventory,
