--- a/sources/resume.html
+++ b/sources/resume.html
@@ -1,5 +1,5 @@
-<!DOCTYPE>
-<link rel="stylesheet" type="text/css" href="resume.css"/>
+
+<link rel="stylesheet" herf="resume.css">
  <html>
 <h1>Habo<span> Alo</span></h1>
 <h2>haboush46@gmail.com<span></span></h2>
