--- a/sources/index.html
+++ b/sources/index.html
@@ -9,7 +9,7 @@
   <a href="#Links">Links</a>
 </div>
    <head>
-     <link rel="stylesheet" herf="resume.css">
+     <link rel="stylesheet" herf="..resume.css">
      <title>first HTML web page</title>
    </head/>
    <body>
