--- a/resume.html
+++ b/resume.html
@@ -1,3 +1,12 @@
+<<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <link rel="stylesheet" href="./resume.css">
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+
 <h1>Habo<span> Alo</span></h1>
 <h2>haboush46@gmail.com<span></span></h2>
 <h2>470-659-7636<span></span></h2>
@@ -72,3 +81,6 @@ Associate of Arts and Sciences - AAS</br>
 <ul><div>Troubleshooting</ul></div>
 <ul><div>Problem Solving</ul></div>
 <p>Here is my linkedin <a href=https://www.linkedin.com/in/habo-alo-149923114>link</a>
+
+</body>
+</html>
