--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-<h1>Habo<span> Alo</span></h1>
+<h1>Habo Alo</h1>
 <h2>haboush46@gmail.com<span></span></h2>
 <h2>470-659-7636<span></span></h2>
 <h2>Atlanta, GA<span></span></h2>
