--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 
 <h1>Habo Alo</h1>
 <h2>haboush46@gmail.com<span></span></h2>
-<h2>470-659-7636<span></span></h2>
+<h2>470-659-7637<span></span></h2>
 <h2>Atlanta, GA<span></span></h2>
 <ul><p><span class="Coding1">Currently, a student at Georgia State University,
   majoring in information system management,
@@ -17,10 +17,10 @@
   and two years of customer service.
   Pursuing my degree toward getting a bachelor's in IT management, with a focus on Cyber security.</span></P></ul>
 <lo>
-<h3>Work experience</h3>
+  <h3><b>Work experience</b></h3>
 <ul><div>
 <h3>Sales Specialist</h3>
-ASR Group LLC</br>
+  <div1>ASR Group LLC</div1></br>
 Jul 2021 - Mar 2022</br>
 Tucker, Georgia</br>
 Resolve customer complaints regarding sales and service.
@@ -31,7 +31,7 @@ Develop plans to acquire new customers or clients through direct sales technique
 Assign sales territories and set sales quotas. Plan and coordinate training programs for sales staff.</div></ul>
 <ul><div>
 <h3>Cashier Customer Service</h3>
-Boru Boru Sushi</br>
+  <div1>Boru Boru Sushi</div1></br>
 Jun 2019 - Mar 2021</br>
 Atlanta, Georgia</br>
 Complete daily orders, provide the best service for the customers.
@@ -41,7 +41,7 @@ Promoted new products and work on making sales higher by following store marketi
 Ensured that all health and safety requirements are completed.</div></ul>
 <ul><div>
 <h3>Front Of House Assistant</h3>
-Bezoria Medetrenian Cuisine</br>
+  <div1>Bezoria Medetrenian Cuisine</div1></br>
 Sep 2018 - Jun 2019</br>
 Atlanta, Georgia</br>
 Completed daily orders, provide the best service for the customers.
@@ -50,7 +50,7 @@ Trained new staff to operate daily tasks as they should be.
 Worked on the register and deal with orders purchasing and refunds. </div></ul>
 <ul><div>
 <h3>Warehouse Inventory Clerk</h3>
-Ross Stores, Inc</br>
+  <div1>Ross Stores, Inc</div1></br>
 Oct 2016 - Jul 2018</br>
 Rock Hill, South Carolina</br>
 Responsibility for achieving production requirements.
@@ -61,13 +61,13 @@ The recorded number of units handled and moved using daily production sheets and
 </lo>
 <h3><b> Education</b></h3>
 <ul><div>
-<h3>Georgia State University</h3>
+  <h3><div1>Georgia State University</div1></h3>
 Bachelor's degree, Management Information Systems</br>
-2019 - 2024<br>
+2019 - 2024 (currently enrolled)<br>
 Activities and societies: Mentoring Initiative for New Americans “MINA”</br>
 </ul></div>
 <ul><div>
-<h3>University of Aleppo</h3>
+  <h3><div1>University of Aleppo</div1></h3>
 Associate of Arts and Sciences - AAS</br>
 2011 - 2013</br>
 <h3><b> Skills</b></h3>
@@ -80,7 +80,7 @@ Associate of Arts and Sciences - AAS</br>
 <ul><div>Team Work</ul></div>
 <ul><div>Troubleshooting</ul></div>
 <ul><div>Problem Solving</ul></div>
-<p>Here is my linkedin <a href=https://www.linkedin.com/in/habo-alo-149923114>link</a>
+<p>Here is my linkedin <a href="www.linkedin.com/in/habo-alo-149923114">link</a>
 
 </body>
 </html>
