--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <div class="topnav">
   <a class="active" href="#home">Home</a>
   <a href="#Bio">Bio</a>
-  <a href="#My Resume">My Resume</a>
+  <a href="resume.html">My Resume</a>
    <a href="#Projects">Projects</a>
   <a href="#contact">Contact</a>
   <a href="#Links">Links</a>
@@ -23,13 +23,8 @@
         <li>With Refcode, I will learn how to build my first website, and know how to code, which for me is the most valuable experience that I will gain.</li>
     </ol>
 
-    <h2><a href="resume.html">Check my Resume</a>
-
    </header>
   <section>
-    <p>
-      hello there my name is Habo Alo and i like coding
-    </p>
     </section>
 </body>
 </html>
