--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
    <header>
              <h1>Mt Story with Web Development</h1>
     <span>
-        When I was in high school, I always wanted to be a teacher. When I started to go to college, I started to use computers and the internet more in my daily life. Then, I wanted to learn how computers, softwares, and web pages work. That is what motivated me to study computer information systems in college, and start looking for a source that teaches me how to code. I figured out that I enjoy doing hands- on projects and learning while applying my learning rather than just keep reading and watching videos.
+        When I was in high school, I always wanted to be a teacher. 
+      When I started to go to college, I started to use computers and the internet more in my daily life. 
+      Then, I wanted to learn how computers, softwares, and web pages work. 
+      That is what motivated me to study computer information systems in college, and start looking for a source that teaches me how to code. 
+      I figured out that I enjoy doing hands- on projects and learning while applying my learning rather than just keep reading and watching videos.
      </span>
      <lo>
         With Refcode, I will learn how to build my first website, and know how to code, which for me is the most valuable experience that I will gain.
