--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <a href="#Links">Links</a>
 </div>
    <head>
+     <link rel="stylesheet" href="../css/index.css">
      <title>first HTML web page</title>
    </head/>
    <body>
