--- a/resume.html
+++ b/resume.html
@@ -80,7 +80,7 @@ Associate of Arts and Sciences - AAS</br>
 <ul><div>Team Work</ul></div>
 <ul><div>Troubleshooting</ul></div>
 <ul><div>Problem Solving</ul></div>
-<p>Here is my linkedin <a href="www.linkedin.com/in/habo-alo-149923114">link</a>
+<p>Here is my linkedin <a href="www.linkedin.com/in/habo-alo-149923114">link</a></p>
 
 </body>
 </html>
