--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    </head/>
    <body>
    <header>
-             <h1>Mt Story with Web Development</h1>
+             <h1>My Story with Web Development</h1>
     <span>
   When I was in high school, I always wanted to be a teacher.
   When I started to go to college, I started to use computers and the internet more in my daily life.
