--- a/sources/links.html
+++ b/sources/links.html
@@ -1,6 +1,7 @@
 <<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="../css/links.css">
     <meta charset="utf-8">
     <title>Links</title>
         <h1> Here are links for some of  my classmates websites, that I can use as a refrences </h1>
