links added to html
links add to html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <a href="resume.html">My Resume</a>
    <a href="#Projects">Projects</a>
   <a href="#contact">Contact</a>
-  <a href="#Links">Links</a>
+  <a href="links.html">Links</a>
 </div>
    <head>
      <link rel="stylesheet" href="../css/index.css">
