--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <div class="topnav">
   <a class="active" href="#home">Home</a>
-  <a href="#Bio">Bio</a>
+  <a href="bio.html">Bio</a>
   <a href="resume.html">My Resume</a>
    <a href="#Projects">Projects</a>
   <a href="#contact">Contact</a>
