--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <div class="topnav">
   <a class="active" href="#home">Home</a>
-  <a href="bio.html">Bio</a>
-  <a href="resume.html">My Resume</a>
+  <a href="./sources/bio.html">Bio</a>
+  <a href="./sources/resume.html">My Resume</a>
    <a href="#Projects">Projects</a>
   <a href="#contact">Contact</a>
-  <a href="links.html">Links</a>
+  <a href="./sources/links.html">Links</a>
 </div>
    <head>
      <link rel="stylesheet" href="../css/index.css">
