links.html updated
I updated links.html

--- a/sources/links.html
+++ b/sources/links.html
@@ -7,13 +7,13 @@
         <h1> Here are links for some of  my classmates websites, that I can use as a refrences </h1>
    </head>
   <body>
-    <p>Mohamad Alo (Many) <a href="http//:mohamadalo.com/">link</a></p>
-    <p>Mohammed Ghazal (Mohammed) <a href="http//:mohammedghazal.com/">link</a></p>
-        <p>Yousef Zeitone (Yousef)<a href="http//:yousefzeitone.com">link</a>
-          <p>MHD Alghazouli (Moe)<a href="http//:moealghazouli.com/">link</a>
-            <p>Vinicius Pietscher (Vini)<a href="https://viniciuspietscher.com/">link</a>
-    <p>Mohammed Ahmed (Mohammed)<a href="https://mohammedahmeddev.com/">link</a></p>
-    <p>Chalew Deghebo<a href="http://chalew.codes/"> link</a></p>
-    <p>Kaeden Tun<a href="https://kaedentun.com/"> link</a></p>
+    <a href="http//:mohamadalo.com/">>Mohamad Alo (Many)</a></p>
+    <a href="http//:mohammedghazal.com/">Mohammed Ghazal (Mohammed)</a></p>
+    <a href="http//:yousefzeitone.com">Yousef Zeitone (Yousef)</a>
+    <a href="http//:moealghazouli.com/">MHD Alghazouli (Moe)</a>
+    <a href="https://viniciuspietscher.com/">Vinicius Pietscher (Vini)</a>
+    <a href="https://mohammedahmeddev.com/">Mohammed Ahmed (Mohammed)</a>
+    <a href="http://chalew.codes/"> Chalew Deghebo</a>
+    <a href="https://kaedentun.com/"> Kaden Tun </a>
   </body>
 </html>
