edit to links.html

--- a/sources/links.html
+++ b/sources/links.html
@@ -7,12 +7,13 @@
         <h1> Here are links for some of  my classmates websites, that I can use as a refrences </h1>
    </head>
   <body>
-    <a href="http//:mohamadalo.com/">>Mohamad Alo (Many)</a></p>
-    <a href="http//:mohammedghazal.com/">Mohammed Ghazal (Mohammed)</a></p>
-    <a href="http//:yousefzeitone.com">Yousef Zeitone (Yousef)</a>
-    <a href="http//:moealghazouli.com/">MHD Alghazouli (Moe)</a>
-    <a href="https://viniciuspietscher.com/">Vinicius Pietscher (Vini)</a>
-    <a href="https://mohammedahmeddev.com/">Mohammed Ahmed (Mohammed)</a>
+
+    <a href="http//:mohamadalo.com/"> Mohamad Alo </a>
+    <a href="http//:mohammedghazal.com/"> Mohammed Ghazal</a>
+    <a href="http//:yousefzeitone.com"> Yousef Zeitone</a>
+    <a href="http//:moealghazouli.com/"> MHD Alghazouli</a>
+    <a href="https://viniciuspietscher.com/"> Vinicius Pietscher</a>
+    <a href="https://mohammedahmeddev.com/"> Mohammed Ahmed</a>
     <a href="http://chalew.codes/"> Chalew Deghebo</a>
     <a href="https://kaedentun.com/"> Kaden Tun </a>
   </body>
