--- a/sources/links.html
+++ b/sources/links.html
@@ -8,10 +8,10 @@
    </head>
   <body>
 
-    <a href="http//:mohamadalo.com/"> Mohamad Alo </a>
-    <a href="http//:mohammedghazal.com/"> Mohammed Ghazal</a>
-    <a href="http//:yousefzeitone.com"> Yousef Zeitone</a>
-    <a href="http//:moealghazouli.com/"> MHD Alghazouli</a>
+    <a href="http://mohamadalo.com/"> Mohamad Alo </a>
+    <a href="http://mohammedghazal.com/"> Mohammed Ghazal</a>
+    <a href="http://yousefzeitone.com"> Yousef Zeitone</a>
+    <a href="http://moealghazouli.com/"> MHD Alghazouli</a>
     <a href="https://viniciuspietscher.com/"> Vinicius Pietscher</a>
     <a href="https://mohammedahmeddev.com/"> Mohammed Ahmed</a>
     <a href="http://chalew.codes/"> Chalew Deghebo</a>
