--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
   <a class="active" href="#home">Home</a>
   <a href="./sources/bio.html">Bio</a>
   <a href="./sources/resume.html">My Resume</a>
-   <a href="#Projects">Projects</a>
+  <a href="#Projects">Projects</a>
   <a href="#contact">Contact</a>
   <a href="./sources/links.html">Links</a>
 </div>
    <head>
+
      <link rel="stylesheet" href="../css/index.css">
      <title>first HTML web page</title>
    </head/>
    <body>
+     <img src="./image.jpg/haboalo.jpg" alt="haboalo">
    <header>
              <h1>My Story with Web Development</h1>
     <span>
