--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE>
 <html>
-  <div class="topnav">
+  <center><div class="topnav">
   <a class="active" href="#home">Home</a>
   <a href="./sources/bio.html">Bio</a>
   <a href="./sources/resume.html">My Resume</a>
   <a href="#Projects">Projects</a>
-  <a href="#contact">Contact</a>
+  <a href="./sources/contact.html">Contact</a>
   <a href="./sources/links.html">Links</a>
-</div>
+</div></center>
    <head>
 
      <link rel="stylesheet" href="../css/index.css">
