--- a/sources/contact.html
+++ b/sources/contact.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="../css/contact.css">
     <meta charset="utf-8">
     <title> Contact </title>
-     <p> If you would like to contact me click on one of the links below</p>
+     <p> If you would like to contact me, click on one of the links below</p>
      <a href="http://www.linkedin.com/in/habo-alo-149923114"> Linkedin </a>
      <a href="https://www.facebook.com/habash.ali93/"> Facebook </a>
      <a href="https://www.instagram.com/habo.alo/?hl=en"> Instagram</a>
