--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <a class="active" href="#home">Home</a>
   <a href="./sources/bio.html">Bio</a>
   <a href="./sources/resume.html">My Resume</a>
-  <a href="#Projects">Projects</a>
+  <a href="./sources/projects.html">Projects</a>
   <a href="./sources/contact.html">Contact</a>
   <a href="./sources/links.html">Links</a>
 </div></center>
