--- a/sources/contact.html
+++ b/sources/contact.html
@@ -8,7 +8,7 @@
      <a href="http://www.linkedin.com/in/habo-alo-149923114"> Linkedin </a>
      <a href="https://www.facebook.com/habash.ali93/"> Facebook </a>
      <a href="https://www.instagram.com/habo.alo/?hl=en"> Instagram</a>
-     <a href="https://github.com/Habo-Alo"> GitHub</a>
+     <a href="https://twitter.com/haboali1"> Twitter </a>
   </head>
   <body>
 
