--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
   <center><div class="topnav">
-  <a class="active" href="#home">Home</a>
+  <a class="active" href="./sources/home.html">Home</a>
   <a href="./sources/bio.html">Bio</a>
   <a href="./sources/resume.html">My Resume</a>
   <a href="./sources/projects.html">Projects</a>
@@ -14,19 +14,13 @@
      <title>first HTML web page</title>
    </head/>
    <body>
-     <img src="./image.jpg/haboalo.jpg" alt="haboalo">
+
    <header>
-             <h1>My Story with Web Development</h1>
-    <span>
-  When I was in high school, I always wanted to be a teacher.
-  When I started to go to college, I started to use computers and the internet more in my daily life.
-  Then, I wanted to learn how computers, softwares, and web pages work.
-  That is what motivated me to study computer information systems in college, and start looking for a source that teaches me how to code.
-  I figured out that I enjoy doing hands- on projects and learning while applying my learning rather than just keep reading and watching videos.
-     </span>
-     <lo>
-        With Refcode, I will learn how to build my first website, and know how to code, which for me is the most valuable experience that I will gain.
-    </lo>
+      <h1> Habo Mohamad Alo</h1>
+      <h2> Georgia State University</h2>
+      <h2> Computer Information Systems</h2>
+      <h2> Class of 2024</h2>
+
    </header>
   <section>
     </section>
