--- a/sources/home.html
+++ b/sources/home.html
@@ -1,32 +1,26 @@
-<!DOCTYPE html>
-<div class="topnav">
-<a class="active" href="#home">Home</a>
-<a href="./sources/bio.html">Bio</a>
-<a href="./sources/resume.html">My Resume</a>
-<a href="#Projects">Projects</a>
-<a href="#contact">Contact</a>
-<a href="./sources/links.html">Links</a>
-</div>
-<head>
-  <link rel="stylesheet" href="../css/index.css">
-  <title>first HTML web page</title>
-</head/>
-<body>
-  <img src="./image.jpg/syria.jpg" alt="haboalo">
-<header>
-          <h1>My Story with Web Development</h1>
- <span>
-When I was in high school, I always wanted to be a teacher.
-When I started to go to college, I started to use computers and the internet more in my daily life.
-Then, I wanted to learn how computers, softwares, and web pages work.
-That is what motivated me to study computer information systems in college, and start looking for a source that teaches me how to code.
-I figured out that I enjoy doing hands- on projects and learning while applying my learning rather than just keep reading and watching videos.
-  </span>
-  <lo>
-     With Refcode, I will learn how to build my first website, and know how to code, which for me is the most valuable experience that I will gain.
- </lo>
-</header>
-<section>
- </section>
+<!DOCTYPE>
+<html>
+   <head>
+
+     <link rel="stylesheet" href="../css/home.css">
+     <title>first HTML web page</title>
+   </head/>
+   <body>
+     <img src="../image.jpg/haboalo.jpg" alt="haboalo">
+   <header>
+             <h1>My Story with Web Development</h1>
+    <span>
+  When I was in high school, I always wanted to be a teacher.
+  When I started to go to college, I started to use computers and the internet more in my daily life.
+  Then, I wanted to learn how computers, softwares, and web pages work.
+  That is what motivated me to study computer information systems in college, and start looking for a source that teaches me how to code.
+  I figured out that I enjoy doing hands- on projects and learning while applying my learning rather than just keep reading and watching videos.
+     </span>
+     <lo>
+        With Refcode, I will learn how to build my first website, and know how to code, which for me is the most valuable experience that I will gain.
+    </lo>
+   </header>
+  <section>
+    </section>
 </body>
 </html>
