--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1> Habo Mohamad Alo</h1>
       <h2> Georgia State University</h2>
       <h2> Computer Information Systems</h2>
-      <h2> Class of 2024</h2>
+      <h2> Class of 2024 candidate</h2>
 
    </header>
   <section>
