Html, CSS files added and edited
I have edited the navigation bar for each html and css file. Now, all the pages have the nav bar, but they still not active, which will require me to keep going back to the main page in order to access subpages.

--- a/sources/resume.html
+++ b/sources/resume.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <center><div class="topnav">
+    <a class="active" href="./sources/home.html">Home</a>
+    <a href="./sources/bio.html">Bio</a>
+    <a href="./sources/resume.html">My Resume</a>
+    <a href="./sources/projects.html">Projects</a>
+    <a href="./sources/contact.html">Contact</a>
+    <a href="./sources/links.html">Links</a>
+  </div></center>
     <link rel="stylesheet" href="../css/resume.css">
     <meta charset="utf-8">
     <title></title>
