--- a/sources/home.html
+++ b/sources/home.html
@@ -1,7 +1,14 @@
 <!DOCTYPE>
 <html>
    <head>
-
+     <center><div class="topnav">
+     <a class="active" href="./sources/home.html">Home</a>
+     <a href="./sources/bio.html">Bio</a>
+     <a href="./sources/resume.html">My Resume</a>
+     <a href="./sources/projects.html">Projects</a>
+     <a href="./sources/contact.html">Contact</a>
+     <a href="./sources/links.html">Links</a>
+   </div></center>
      <link rel="stylesheet" href="../css/home.css">
      <title>first HTML web page</title>
    </head/>
