--- a/sources/projects.html
+++ b/sources/projects.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<center><div class="topnav">
+<a class="active" href="./sources/home.html">Home</a>
+<a href="./sources/bio.html">Bio</a>
+<a href="./sources/resume.html">My Resume</a>
+<a href="./sources/projects.html">Projects</a>
+<a href="./sources/contact.html">Contact</a>
+<a href="./sources/links.html">Links</a>
+</div></center>
   <head>
     <link rel="stylesheet" href="../css/projects.css">
     <meta charset="utf-8">
