--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
-<!DOCTYPE>
-<html>
-  <center><div class="topnav">
-  <a class="active" href="./sources/home.html">Home</a>
-  <a href="./sources/bio.html">Bio</a>
-  <a href="./sources/resume.html">My Resume</a>
-  <a href="./sources/projects.html">Projects</a>
-  <a href="./sources/contact.html">Contact</a>
-  <a href="./sources/links.html">Links</a>
-</div></center>
-   <head>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../css/index.css" />
+    <title> Habo Alo</title>
+  </head>
+  <body>
+    <nav>
+      <h2 class="nav--main"><a href="#">Habo Mohamad Alo</a></h2>
+      <ul class="nav--list">
+        <li class="nav--item"><a href="./sources/home.html"> Home</a></li>
+        <li class="nav--item"><a href="./sources/bio.html"> Bio</a></li>
+        <li class="nav--item"><a href="./sources/resume.html">Resume</a></li>
+        <li class="nav--item"><a href="./sources/projects.html">Projects</a></li>
+        <li class="nav--item"><a href="./sources/contact.html"> Contact</a></li>
+        <li class="nav--item"><a href="./sources/links.html">Links</a></li>
+      </ul>
+    </nav>
 
-     <link rel="stylesheet" href="../css/index.css">
-     <title>first HTML web page</title>
-   </head/>
-   <body>
-
-   <header>
-      <h1> Habo Mohamad Alo</h1>
-      <h2> Georgia State University</h2>
-      <h2> Computer Information Systems</h2>
-      <h2> Class of 2024 candidate</h2>
-
-   </header>
-  <section>
+    <section class="main">
+      <h1 class="main--title"> Habo Alo</h1>
+      <p class="main--subtitle"> Georgia State University</p>
+      <p> Computer Information Systems</p>
+      <p>Class of 2024</p>
+      </p>
     </section>
-</body>
+    </section>
+  </body>
 </html>
