--- a/sources/resume.html
+++ b/sources/resume.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<nav>
+  <h2 class="nav--main"><a href="#">Habo Mohamad Alo</a></h2>
+  <ul class="nav--list">
+    <li class="nav--item"><a href="/sources/home.html"> Home</a></li>
+    <li class="nav--item"><a href="/sources/bio.html"> Bio</a></li>
+    <li class="nav--item"><a href="/sources/resume.html">Resume</a></li>
+    <li class="nav--item"><a href="/sources/projects.html">Projects</a></li>
+    <li class="nav--item"><a href="/sources/contact.html"> Contact</a></li>
+    <li class="nav--item"><a href="/sources/links.html">Links</a></li>
+  </ul>
+</nav>
   <head>
     <link rel="stylesheet" href="../css/resume.css">
     <meta charset="utf-8">
@@ -9,15 +20,14 @@
 
 <h1>Habo Alo</h1>
 <h2>haboush46@gmail.com<span></span></h2>
-<h2>470-659-7637<span></span></h2>
 <h2>Atlanta, GA<span></span></h2>
-<ul><p><span class="Coding1">Currently, a student at Georgia State University,
+<ul><p2><span class="Coding1">Currently, a student at Georgia State University,
   majoring in information system management,
   with two years of experience in a warehouse inventory,
   and two years of customer service.
-  Pursuing my degree toward getting a bachelor's in IT management, with a focus on Cyber security.</span></P></ul>
+  Pursuing my degree toward getting a bachelor's in IT management, with a focus on Cyber security.</span></p2></ul>
 <lo>
-  <h3><b>Work experience</b></h3>
+  <h4><b>Work experience</b></h4>
 <ul><div>
 <h3>Sales Specialist</h3>
   <div1>ASR Group LLC</div1></br>
@@ -59,7 +69,7 @@ Tagged all inbound merchandise with receiving date. Reported all equipment failu
 Tracked time spent on assignments each day for productivity reporting.
 The recorded number of units handled and moved using daily production sheets and work tickets.</div></ul>
 </lo>
-<h3><b> Education</b></h3>
+<h4><b> Education</b></h4>
 <ul><div>
   <h3><div1>Georgia State University</div1></h3>
 Bachelor's degree, Management Information Systems</br>
@@ -70,7 +80,7 @@ Activities and societies: Mentoring Initiative for New Americans “MINA”</br>
   <h3><div1>University of Aleppo</div1></h3>
 Associate of Arts and Sciences - AAS</br>
 2011 - 2013</br>
-<h3><b> Skills</b></h3>
+<h4><b> Skills</b></h4>
 <ul><div>HTML</ul></div>
 <ul><div>CSS</ul></div>
 <ul><div>Java Script</ul></div>
