--- a/sources/contact.html
+++ b/sources/contact.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<nav>
+  <h2 class="nav--main"><a href="#">Habo Mohamad Alo</a></h2>
+  <ul class="nav--list">
+    <li class="nav--item"><a href="/sources/home.html"> Home</a></li>
+    <li class="nav--item"><a href="/sources/bio.html"> Bio</a></li>
+    <li class="nav--item"><a href="/sources/resume.html">Resume</a></li>
+    <li class="nav--item"><a href="/sources/projects.html">Projects</a></li>
+    <li class="nav--item"><a href="/sources/contact.html"> Contact</a></li>
+    <li class="nav--item"><a href="/sources/links.html">Links</a></li>
+  </ul>
+</nav>
   <head>
     <link rel="stylesheet" href="../css/contact.css">
     <meta charset="utf-8">
     <title> Contact </title>
      <p> If you would like to contact me, click on one of the links below</p>
+     <section2>
      <a href="http://www.linkedin.com/in/habo-alo-149923114"> Linkedin </a>
-     <a href="https://www.facebook.com/habash.ali93/"> Facebook </a>
-     <a href="https://www.instagram.com/habo.alo/?hl=en"> Instagram</a>
      <a href="https://twitter.com/haboali1"> Twitter </a>
+   </section2>
   </head>
   <body>
 
