--- a/sources/home.html
+++ b/sources/home.html
@@ -1,7 +1,17 @@
 <!DOCTYPE>
 <html>
+<nav>
+  <h2 class="nav--main"><a href="#">Habo Mohamad Alo</a></h2>
+  <ul class="nav--list">
+    <li class="nav--item"><a href="/sources/home.html"> Home</a></li>
+    <li class="nav--item"><a href="/sources/bio.html"> Bio</a></li>
+    <li class="nav--item"><a href="/sources/resume.html">Resume</a></li>
+    <li class="nav--item"><a href="/sources/projects.html">Projects</a></li>
+    <li class="nav--item"><a href="/sources/contact.html"> Contact</a></li>
+    <li class="nav--item"><a href="/sources/links.html">Links</a></li>
+  </ul>
+</nav>
    <head>
-
      <link rel="stylesheet" href="../css/home.css">
      <title>first HTML web page</title>
    </head/>
