--- a/sources/links.html
+++ b/sources/links.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<nav>
+  <h2 class="nav--main"><a href="#">Habo Mohamad Alo</a></h2>
+  <ul class="nav--list">
+    <li class="nav--item"><a href="/sources/home.html"> Home</a></li>
+    <li class="nav--item"><a href="/sources/bio.html"> Bio</a></li>
+    <li class="nav--item"><a href="/sources/resume.html">Resume</a></li>
+    <li class="nav--item"><a href="/sources/projects.html">Projects</a></li>
+    <li class="nav--item"><a href="/sources/contact.html"> Contact</a></li>
+    <li class="nav--item"><a href="/sources/links.html">Links</a></li>
+  </ul>
+</nav>
   <head>
     <link rel="stylesheet" href="../css/links.css">
     <meta charset="utf-8">
     <title>Links</title>
         <h1> Here are links for some of  my classmates websites, that I can use as a refrences </h1>
    </head>
-  <body>
-
+  <body2>
     <a href="http://mohamadalo.com/"> Mohamad Alo </a>
     <a href="http://mohammedghazal.com/"> Mohammed Ghazal</a>
     <a href="http://yousefzeitone.com"> Yousef Zeitone</a>
@@ -16,5 +26,5 @@
     <a href="https://mohammedahmeddev.com/"> Mohammed Ahmed</a>
     <a href="http://chalew.codes/"> Chalew Deghebo</a>
     <a href="https://kaedentun.com/"> Kaden Tun </a>
-  </body>
+  </body2>
 </html>
