--- a/sources/projects.html
+++ b/sources/projects.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<nav>
+  <h2 class="nav--main"><a href="#">Habo Mohamad Alo</a></h2>
+  <ul class="nav--list">
+    <li class="nav--item"><a href="/sources/home.html"> Home</a></li>
+    <li class="nav--item"><a href="/sources/bio.html"> Bio</a></li>
+    <li class="nav--item"><a href="/sources/resume.html">Resume</a></li>
+    <li class="nav--item"><a href="/sources/projects.html">Projects</a></li>
+    <li class="nav--item"><a href="/sources/contact.html"> Contact</a></li>
+    <li class="nav--item"><a href="/sources/links.html">Links</a></li>
+  </ul>
+</nav>
   <head>
     <link rel="stylesheet" href="../css/projects.css">
     <meta charset="utf-8">
     <title> projects</title>
     <center><h1> To make it easier for you, follow my GitHub link bellow, It has all my projects</h1></center>
-    <a href="https://github.com/Habo-Alo"> My GitHub </a>
+    <b><a href="https://github.com/Habo-Alo"> My GitHub </a></b>
   </head>
   <body>
   </body>
