--- a/sources/links.html
+++ b/sources/links.html
@@ -20,7 +20,7 @@
   <body2>
     <a href="http://mohamadalo.com/"> Mohamad Alo </a>
     <a href="http://mohammedghazal.com/"> Mohammed Ghazal</a>
-    <a href="http://yousefzeitone.com"> Yousef Zeitone</a>
+    <a href="https://yousefzaitone.com/"> Yousef Zeitone</a>
     <a href="http://moealghazouli.com/"> MHD Alghazouli</a>
     <a href="https://viniciuspietscher.com/"> Vinicius Pietscher</a>
     <a href="https://mohammedahmeddev.com/"> Mohammed Ahmed</a>
