--- a/sources/links.html
+++ b/sources/links.html
@@ -12,6 +12,7 @@
   </ul>
 </nav>
   <head>
+    <link rel="stylesheet" href="../css/nav.css" />
     <link rel="stylesheet" href="../css/links.css">
     <meta charset="utf-8">
     <title>Links</title>
@@ -20,7 +21,7 @@
   <body2>
     <a href="http://mohamadalo.com/"> Mohamad Alo </a>
     <a href="http://mohammedghazal.com/"> Mohammed Ghazal</a>
-    <a href="http://yousefzeitone.com"> Yousef Zeitone</a>
+    <a href="https://yousefzaitone.com/"> Yousef Zeitone</a>
     <a href="http://moealghazouli.com/"> MHD Alghazouli</a>
     <a href="https://viniciuspietscher.com/"> Vinicius Pietscher</a>
     <a href="https://mohammedahmeddev.com/"> Mohammed Ahmed</a>
