--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h1 class="main--title"> Habo Alo</h1>
       <p class="main--subtitle"> Georgia State University</p>
       <p> Computer Information Systems</p>
-      <p>Class of 2024</p>
+      <p>Class of 2024 Candidate</p>
       </p>
     </section>
     </section>
