--- a/sources/projects.html
+++ b/sources/projects.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="../css/projects.css">
     <meta charset="utf-8">
     <title> projects</title>
-    <center><h1> To make it easier for you, follow my GitHub link bellow, It has all my projects</h1></center>
-    <b><a href="https://github.com/Habo-Alo"> My GitHub </a></b>
+    <center><h1>All of my projects can be seen on my</h1></center>
+    <b><a href="https://github.com/Habo-Alo"> GitHub </a></b>
   </head>
   <body>
   </body>
