changes added to the website

--- a/index.html
+++ b/index.html
@@ -1,37 +1,39 @@
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../css/index.css" />
-    <title> Habo Alo</title>
-  </head>
-  <body>
-    <nav>
-      <h2 class="nav--main"><a href="#">Habo Mohamad Alo</a></h2>
-      <ul class="nav--list">
-        <li class="nav--item"><a href="./sources/home.html"> Home</a></li>
-        <li class="nav--item"><a href="./sources/bio.html"> Bio</a></li>
-        <li class="nav--item"><a href="./sources/resume.html">Resume</a></li>
-        <li class="nav--item"><a href="./sources/projects.html">Projects</a></li>
-        <li class="nav--item"><a href="./sources/contact.html"> Contact</a></li>
-        <li class="nav--item"><a href="./sources/links.html">Links</a></li>
-      </ul>
-    </nav>
+<!DOCTYPE>
+<html>
+<head>
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/home.css">
+  <title>first HTML web page</title>
+</head/>
 
-    <section class="main">
-      <h1 class="main--title"> Habo Alo</h1>
-      <p class="main--subtitle"> Georgia State University</p>
-      <p> Computer Information Systems</p>
-      <p>Class of 2024 Candidate</p>
-      </p>
-    </section>
-    </section>
-  </body>
+
+   <body>
+     <nav>
+       <h2 class="nav--main"><a href="#">Habo Mohamad Alo</a></h2>
+       <ul class="nav--list">
+         <li class="nav--item"><a class="active" href="/index.html"> Home</a></li>
+         <li class="nav--item"><a href="/sources/bio.html"> Bio</a></li>
+         <li class="nav--item"><a href="/sources/resume.html">Resume</a></li>
+         <li class="nav--item"><a href="/sources/projects.html">Projects</a></li>
+         <li class="nav--item"><a href="/sources/contact.html"> Contact</a></li>
+         <li class="nav--item"><a href="/sources/links.html">Links</a></li>
+       </ul>
+     </nav>
+     <main>
+     <img src="../image.jpg/haboalo.jpg" alt="haboalo">
+
+             <h1>My Story with Web Development</h1>
+    <span>
+  When I was in high school, I always wanted to be a teacher.
+  When I started to go to college, I started to use computers and the internet more in my daily life.
+  Then, I wanted to learn how computers, softwares, and web pages work.
+  That is what motivated me to study computer information systems in college, and start looking for a source that teaches me how to code.
+  I figured out that I enjoy doing hands- on projects and learning while applying my learning rather than just keep reading and watching videos.
+     </span>
+     <lo>
+        With Refcode, I will learn how to build my first website, and know how to code, which for me is the most valuable experience that I will gain.
+    </lo>
+</main>
+
+</body>
 </html>
