--- a/sources/resume.html
+++ b/sources/resume.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<nav>
-  <h2 class="nav--main"><a href="#">Habo Mohamad Alo</a></h2>
-  <ul class="nav--list">
-    <li class="nav--item"><a href="/sources/home.html"> Home</a></li>
-    <li class="nav--item"><a href="/sources/bio.html"> Bio</a></li>
-    <li class="nav--item"><a href="/sources/resume.html">Resume</a></li>
-    <li class="nav--item"><a href="/sources/projects.html">Projects</a></li>
-    <li class="nav--item"><a href="/sources/contact.html"> Contact</a></li>
-    <li class="nav--item"><a href="/sources/links.html">Links</a></li>
-  </ul>
-</nav>
+
   <head>
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/resume.css">
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
-
+    <nav>
+      <h2 class="nav--main"><a href="#">Habo Mohamad Alo</a></h2>
+      <ul class="nav--list">
+        <li class="nav--item"><a href="/index.html"> Home</a></li>
+        <li class="nav--item"><a href="/sources/bio.html"> Bio</a></li>
+        <li class="nav--item"><a class="active"href="/sources/resume.html">Resume</a></li>
+        <li class="nav--item"><a href="/sources/projects.html">Projects</a></li>
+        <li class="nav--item"><a href="/sources/contact.html"> Contact</a></li>
+        <li class="nav--item"><a href="/sources/links.html">Links</a></li>
+      </ul>
+    </nav><main>
 <h1>Habo Alo</h1>
 <h2>haboush46@gmail.com<span></span></h2>
 <h2>Atlanta, GA<span></span></h2>
@@ -90,7 +91,6 @@ Associate of Arts and Sciences - AAS</br>
 <ul><div>Team Work</ul></div>
 <ul><div>Troubleshooting</ul></div>
 <ul><div>Problem Solving</ul></div>
-<p>Here is my linkedin <a href="https://www.linkedin.com/in/habo-alo-149923114/">link</a></p>
-
+<p>Here is my linkedin <a href="https://www.linkedin.com/in/habo-alo-149923114/">link</a></p></main>
 </body>
 </html>
