--- a/sources/contact.html
+++ b/sources/contact.html
@@ -3,19 +3,20 @@
 <nav>
   <h2 class="nav--main"><a href="#">Habo Mohamad Alo</a></h2>
   <ul class="nav--list">
-    <li class="nav--item"><a href="/sources/home.html"> Home</a></li>
+    <li class="nav--item"><a href="/index.html"> Home</a></li>
     <li class="nav--item"><a href="/sources/bio.html"> Bio</a></li>
     <li class="nav--item"><a href="/sources/resume.html">Resume</a></li>
     <li class="nav--item"><a href="/sources/projects.html">Projects</a></li>
-    <li class="nav--item"><a href="/sources/contact.html"> Contact</a></li>
+    <li class="nav--item"><a class="active"href="/sources/contact.html"> Contact</a></li>
     <li class="nav--item"><a href="/sources/links.html">Links</a></li>
   </ul>
 </nav>
   <head>
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/contact.css">
     <meta charset="utf-8">
     <title> Contact </title>
-     <p> If you would like to contact me, click on one of the links below</p>
+     <h1> If you would like to contact me, click on one of the links below</h1>
      <section2>
      <a href="http://www.linkedin.com/in/habo-alo-149923114"> Linkedin </a>
      <a href="https://twitter.com/haboali1"> Twitter </a>
