--- a/sources/home.html
+++ b/sources/home.html
@@ -1,23 +1,27 @@
 <!DOCTYPE>
 <html>
-<nav>
-  <h2 class="nav--main"><a href="#">Habo Mohamad Alo</a></h2>
-  <ul class="nav--list">
-    <li class="nav--item"><a href="/sources/home.html"> Home</a></li>
-    <li class="nav--item"><a href="/sources/bio.html"> Bio</a></li>
-    <li class="nav--item"><a href="/sources/resume.html">Resume</a></li>
-    <li class="nav--item"><a href="/sources/projects.html">Projects</a></li>
-    <li class="nav--item"><a href="/sources/contact.html"> Contact</a></li>
-    <li class="nav--item"><a href="/sources/links.html">Links</a></li>
-  </ul>
-</nav>
-   <head>
-     <link rel="stylesheet" href="../css/home.css">
-     <title>first HTML web page</title>
-   </head/>
+<head>
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/home.css">
+  <title>first HTML web page</title>
+</head/>
+
+
    <body>
+     <nav>
+       <h2 class="nav--main"><a href="#">Habo Mohamad Alo</a></h2>
+       <ul class="nav--list">
+         <li class="nav--item"><a class="active" href="/sources/home.html"> Home</a></li>
+         <li class="nav--item"><a href="/sources/bio.html"> Bio</a></li>
+         <li class="nav--item"><a href="/sources/resume.html">Resume</a></li>
+         <li class="nav--item"><a href="/sources/projects.html">Projects</a></li>
+         <li class="nav--item"><a href="/sources/contact.html"> Contact</a></li>
+         <li class="nav--item"><a href="/sources/links.html">Links</a></li>
+       </ul>
+     </nav>
+     <main>
      <img src="../image.jpg/haboalo.jpg" alt="haboalo">
-   <header>
+
              <h1>My Story with Web Development</h1>
     <span>
   When I was in high school, I always wanted to be a teacher.
@@ -29,8 +33,7 @@
      <lo>
         With Refcode, I will learn how to build my first website, and know how to code, which for me is the most valuable experience that I will gain.
     </lo>
-   </header>
-  <section>
-    </section>
+</main>
+
 </body>
 </html>
