--- a/sources/projects.html
+++ b/sources/projects.html
@@ -3,15 +3,16 @@
 <nav>
   <h2 class="nav--main"><a href="#">Habo Mohamad Alo</a></h2>
   <ul class="nav--list">
-    <li class="nav--item"><a href="/sources/home.html"> Home</a></li>
+    <li class="nav--item"><a href="/index.html"> Home</a></li>
     <li class="nav--item"><a href="/sources/bio.html"> Bio</a></li>
     <li class="nav--item"><a href="/sources/resume.html">Resume</a></li>
-    <li class="nav--item"><a href="/sources/projects.html">Projects</a></li>
+    <li class="nav--item"><a class="active" href="/sources/projects.html">Projects</a></li>
     <li class="nav--item"><a href="/sources/contact.html"> Contact</a></li>
     <li class="nav--item"><a href="/sources/links.html">Links</a></li>
   </ul>
 </nav>
   <head>
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/projects.css">
     <meta charset="utf-8">
     <title> projects</title>
